[ref] Added Bootstrap-Vue
- NavBar refactor
- Added Babel-Jest

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -53,6 +53,9 @@ $alert-color-level: -7;
 $nav-link-padding-y: .5rem;
 $nav-link-padding-x: 1rem;
 
+$navbar-padding-y: 0;
+$navbar-padding-x: 0;
+
 $navbar-nav-link-padding-x: 0.75rem;
 
 $navbar-brand-font-size: $font-size-lg;
