--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,9 @@
 @import 'node_modules/bootstrap/scss/forms';
 @import 'node_modules/bootstrap/scss/grid';
 @import 'node_modules/bootstrap/scss/input-group';
+@import 'node_modules/bootstrap/scss/nav';
+@import 'node_modules/bootstrap/scss/navbar';
 @import 'node_modules/bootstrap/scss/reboot';
+@import 'node_modules/bootstrap/scss/transitions';
 @import 'node_modules/bootstrap/scss/type';
 @import 'node_modules/bootstrap/scss/utilities';
