--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -74,6 +74,10 @@ $navbar-dark-disabled-color: #bbb;
 $navbar-dark-toggler-icon-bg: url('data:image/svg+xml;charset=utf8,%3Csvg viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg"%3E%3Cpath stroke="lightgrey" stroke-width="2" stroke-miterlimit="10" d="M2 7h25M2 15h25M2 23h25"/%3E%3C/svg%3E');
 $navbar-dark-toggler-border-color: transparent;
 
+// Card
+
+$card-border-width: 0;
+
 // Close
 
 $close-color: #fff;
