--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 
 @import 'node_modules/bootstrap/scss/alert';
 @import 'node_modules/bootstrap/scss/buttons';
+@import 'node_modules/bootstrap/scss/card';
 @import 'node_modules/bootstrap/scss/close';
 @import 'node_modules/bootstrap/scss/forms';
 @import 'node_modules/bootstrap/scss/grid';
@@ -15,3 +16,7 @@
 @import 'node_modules/bootstrap/scss/transitions';
 @import 'node_modules/bootstrap/scss/type';
 @import 'node_modules/bootstrap/scss/utilities';
+
+.bg-overlay {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
+}
