--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,17 @@
 // Colors
 
+$white: #fff;
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+$black: #000;
+
 $primary: #4a8855;
 $secondary: #556370;
 $success: #1ba452;
@@ -33,7 +45,9 @@ $border-radius-sm: 0;
 
 // Fonts
 
-$font-family-sans-serif: 'Open Sans', Helvetica, Arial, sans-serif;
+$font-family-sans-serif: 'Open Sans', -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol';
 
 $font-size-base: 1.125rem;
 $font-size-lg: ($font-size-base * 1.25);
@@ -48,9 +62,22 @@ $alert-bg-level: 8;
 $alert-border-level: 7;
 $alert-color-level: -7;
 
+// Forms
+
+$input-bg: $black;
+$input-disabled-bg: $gray-800;
+
+$input-color: $gray-100;
+$input-border-color: $black;
+$input-box-shadow: none;
+
+$input-transition: none;
+
+$form-feedback-invalid-color: lighten($danger, 20%);
+
 // Navbar
 
-$nav-link-padding-y: .5rem;
+$nav-link-padding-y: 0.5rem;
 $nav-link-padding-x: 1rem;
 
 $navbar-padding-y: 0;
@@ -60,7 +87,9 @@ $navbar-nav-link-padding-x: 0.75rem;
 
 $navbar-brand-font-size: $font-size-lg;
 
-$nav-link-height: ($font-size-base * $line-height-base + $nav-link-padding-y * 2);
+$nav-link-height: (
+  $font-size-base * $line-height-base + $nav-link-padding-y * 2
+);
 $navbar-brand-height: $navbar-brand-font-size * $line-height-base;
 $navbar-brand-padding-y: ($nav-link-height - $navbar-brand-height);
 
