[feat] Implemented Game view

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,7 +17,7 @@ $secondary: #556370;
 $success: #1ba452;
 $info: #39809e;
 $warning: #ccb66b;
-$danger: #790f11;
+$danger: #cc181b;
 $light: #ddd;
 $dark: #0c0d10;
 
@@ -55,6 +55,8 @@ $font-size-lg: ($font-size-base * 1.25);
 $line-height-base: 1.5;
 
 $headings-color: #eee;
+
+$text-muted: #7a8490;
 
 // Alerts
 
