[feat] Improved hero picker
- Added form submit to hero picker with auto completion
- Added Loader color transition
- Set body background to fixed

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -71,7 +71,7 @@ $input-disabled-bg: $gray-800;
 
 $input-color: $gray-100;
 $input-border-color: $black;
-$input-box-shadow: none;
+$input-box-shadow: unset;
 
 $input-transition: none;
 
