[feat] Added Hero details page

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -61,3 +61,45 @@
     transform: none;
   }
 }
+
+.desc-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  text-transform: uppercase;
+  width: 100%;
+
+  li {
+    align-items: center;
+    color: $text-muted;
+    display: flex;
+    justify-content: space-between;
+    padding: ($spacer * 0.25) 0;
+    position: relative;
+
+    .desc-term {
+      margin: 0;
+      position: relative;
+    }
+
+    .desc-line {
+      background: rgba(255, 255, 255, 0.2);
+      flex: 1;
+      height: 1px;
+      margin: 0 $spacer;
+      min-width: $spacer;
+    }
+
+    .desc-value {
+      color: $light;
+      margin: 0;
+      text-align: right;
+    }
+
+    @include hover-focus {
+      .desc-line {
+        background: rgba(255, 255, 255, 0.4);
+      }
+    }
+  }
+}
