--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,13 @@
 @import 'bootstrap';
 @import 'bootstrap-vue/src/index.scss';
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  position: relative;
+}
+
 .bg-overlay {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
 }
@@ -51,9 +58,28 @@
 }
 
 .item-popover {
-  background: linear-gradient(45deg, darken(#23323c, 3), darken(#23323c, 10));
+  background: linear-gradient(
+    60deg,
+    #202b34,
+    #21333c 15%,
+    #202b34 20%,
+    #21333c 50%,
+    #202b34 55%,
+    #21333c 75%,
+    #202b34 80%
+  );
+  border: 1px solid #000000;
   box-shadow: $box-shadow;
   max-width: 400px;
+  z-index: $zindex-tooltip + 1;
+
+  .item-image {
+    border: 1px solid #000000;
+    box-shadow: $box-shadow-sm;
+    height: 64px;
+    margin-right: $spacer;
+    width: 88px;
+  }
 
   .item-name {
     font-weight: $font-weight-bold;
@@ -72,57 +98,85 @@
   }
 
   .item-body {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
+    font-size: $font-size-sm;
     padding: $spacer;
 
+    .item-cd {
+      background: #3c3a3a;
+      height: $spacer;
+      margin: $spacer * 0.25;
+      position: relative;
+      width: $spacer;
+      border: 1px solid #000000;
+      border-radius: $spacer * 0.25;
+      overflow: hidden;
+
+      &::after {
+        background: #bdbdbd;
+        clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 50%);
+        content: '';
+        height: $spacer;
+        left: -1px;
+        position: absolute;
+        top: 0;
+        width: $spacer;
+      }
+    }
+
+    dl {
+      color: rgba(255, 255, 255, 0.7);
+    }
+
     dt {
-      background: linear-gradient(
-        90deg,
-        rgba(150, 180, 200, 0.3),
-        rgba(150, 180, 200, 0.2)
-      );
+      background: linear-gradient(90deg, #26353f, #1d262f 90%);
       font-weight: $font-weight-bold;
       padding: $spacer * 0.25 $spacer * 0.5;
     }
 
     dd {
-      background: linear-gradient(
-        90deg,
-        rgba(150, 180, 200, 0.2),
-        rgba(150, 180, 200, 0.1)
-      );
-      font-size: $font-size-sm;
+      background: #1c262f;
       padding: $spacer * 0.25 $spacer * 0.5;
     }
 
-    .active {
-      color: #c9c9ff;
-
+    .item-active {
       dt {
-        background: linear-gradient(
-          90deg,
-          rgba(100, 100, 255, 0.3),
-          rgba(100, 100, 255, 0.2)
-        );
+        background: linear-gradient(90deg, #38387f, #181e30 90%);
       }
 
       dd {
-        background: linear-gradient(
-          90deg,
-          rgba(100, 100, 255, 0.2),
-          rgba(100, 100, 255, 0.1)
-        );
+        background: #171d2f;
       }
     }
 
-    .item-lore {
-      background: rgba(0, 0, 0, 0.3);
-      color: $text-muted;
-      font-size: $font-size-sm;
-      margin: 0;
+    .item-use {
+      dt {
+        background: linear-gradient(90deg, #273f27, #17231f 90%);
+      }
+
+      dd {
+        background: #162320;
+      }
     }
 
-    *:last-child {
+    .item-hint {
+      background: #1c262f;
+      padding: $spacer * 0.5;
+    }
+
+    .item-note {
+      background: #253844;
+      padding: $spacer * 0.5;
+    }
+
+    .item-lore {
+      background: #0b1215;
+      color: $text-muted;
+      padding: $spacer * 0.5;
+      margin: $spacer * 1.5 0 0 0;
+    }
+
+    & > *:last-child {
       margin-bottom: 0;
     }
   }
