--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -112,3 +112,13 @@ $card-border-width: 0;
 // Close
 
 $close-color: #fff;
+
+// Popovers
+
+$popover-border-color: $black;
+
+$popover-arrow-width: 1rem;
+$popover-arrow-height: $popover-arrow-width;
+$popover-arrow-color: #252b30;
+
+$popover-arrow-outer-color: fade-in($popover-border-color, 0.05) !default;
