[fix] Fix popover body padding

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -117,6 +117,9 @@ $close-color: #fff;
 
 $popover-border-color: $black;
 
+$popover-body-padding-y: 0;
+$popover-body-padding-x: 0;
+
 $popover-arrow-width: 1rem;
 $popover-arrow-height: $popover-arrow-width;
 $popover-arrow-color: #252b30;
