Use font-display: swap

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,10 @@
 @import 'bootstrap';
 @import 'bootstrap-vue/src/index.scss';
 
+body {
+  font-display: swap;
+}
+
 .bg-overlay {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
 }
