--- a/src/components/molecules/HeroSelect/HeroSelect.module.scss
+++ b/src/components/molecules/HeroSelect/HeroSelect.module.scss
@@ -8,23 +8,14 @@
   height: 500px;
 }
 
-.filter {
-  align-items: baseline;
-  display: grid;
-  gap: 0.5rem;
-  grid-template-columns: repeat(2, min-content);
-  margin: 0 auto;
-
-  p {
-    margin: 0;
-  }
-
+.name {
   input {
     background-color: var(--color-bg-stronger);
     border: 0;
     border-radius: $border-radius;
     color: var(--color-text);
     font-size: 1rem;
+    margin-left: 0.5rem;
     padding: 0.5rem;
 
     &:disabled {
@@ -50,7 +41,7 @@
   display: none;
 
   &:checked {
-    + .label {
+    + .hero-label {
       box-shadow: var(--box-shadow-3);
       filter: brightness(1) saturate(1);
       transform: scale(1.2);
@@ -60,13 +51,13 @@
   }
 
   &:disabled:not(:checked) {
-    + .label {
+    + .hero-label {
       filter: brightness(1) saturate(0);
     }
   }
 }
 
-.label {
+.hero-label {
   align-items: center;
   cursor: pointer;
   display: flex;
@@ -80,13 +71,21 @@
 }
 
 .cta {
-  background-color: var(--color-red);
-  border: 0;
-  border-radius: $border-radius;
-  font-size: 1rem;
-  padding: 0.25rem 0.5rem;
+  text-align: center;
 
-  &:hover {
-    background-color: var(--color-red-light);
+  > button {
+    min-width: 100%;
+
+    @media screen and (min-width: $screen-md) {
+      min-width: 75%;
+    }
+
+    @media screen and (min-width: $screen-lg) {
+      min-width: 60%;
+    }
+
+    @media screen and (min-width: $screen-xl) {
+      min-width: 40%;
+    }
   }
 }
