Minor UI updates (#21)
* Add filter to item hints

* Add hero names to /heroes page

* Add variants for TextBox

* Remove alt from hero image on heroes page

* Update meta descriptions

* Remove unnecessary paragraph

* Reverse header link color

* Minor hero select UI update

* Fix heroes page E2E test

* Use build, start for Cypress on CI

--- a/src/components/pages/Heroes/Heroes.module.scss
+++ b/src/components/pages/Heroes/Heroes.module.scss
@@ -1,7 +1,37 @@
+@import 'variables';
+
 .container {
   display: flex;
   flex-direction: column;
-  font-size: 0; // To clear empty space
   gap: 1rem;
   margin: 2rem auto;
+}
+
+.grid {
+  display: grid;
+  gap: 0.5rem 0;
+  grid-template-columns: auto;
+
+  @media screen and (min-width: $screen-sm) {
+    grid-template-columns: repeat(2, auto);
+  }
+
+  @media screen and (min-width: $screen-lg) {
+    grid-template-columns: repeat(3, auto);
+  }
+
+  @media screen and (min-width: $screen-xl) {
+    grid-template-columns: repeat(4, auto);
+  }
+
+  @media screen and (min-width: $screen-xxl) {
+    grid-template-columns: repeat(5, auto);
+  }
+}
+
+.hero {
+  align-items: center;
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(2, min-content);
 }
