--- a/src/components/molecules/HeroSelect/HeroSelect.module.scss
+++ b/src/components/molecules/HeroSelect/HeroSelect.module.scss
@@ -1,40 +1,25 @@
 @import 'variables';
 
 .container {
-  display: grid;
-  gap: 0.5rem;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr auto;
-  height: 500px;
-}
-
-.name {
-  input {
-    background-color: var(--color-bg-stronger);
-    border: 0;
-    border-radius: $border-radius;
-    color: var(--color-text);
-    font-size: 1rem;
-    margin-left: 0.5rem;
-    padding: 0.5rem;
-
-    &:disabled {
-      background-color: var(--color-bg);
-    }
-  }
-}
-
-.no-heroes {
-  place-self: center;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .heroes {
   display: grid;
-  grid-auto-rows: 72px;
-  grid-template-columns: repeat(auto-fill, 128px);
+  gap: 0.5rem;
+  grid-auto-columns: 128px;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(5, 72px);
   justify-content: center;
-  overflow: hidden auto;
-  padding: 0.5rem;
+
+  @media screen and (min-width: $screen-lg) {
+    grid-auto-flow: row;
+    grid-auto-rows: 72px;
+    grid-template-columns: repeat(5, 128px);
+    grid-template-rows: none;
+  }
 }
 
 .radio {
