--- a/src/components/organisms/Match/Match.module.scss
+++ b/src/components/organisms/Match/Match.module.scss
@@ -7,19 +7,8 @@
   margin: 2rem auto;
 
   @media screen and (min-width: $screen-xl) {
-    align-items: center;
-  }
-}
-
-.guess {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  grid-template-columns: auto 1fr;
-  width: 100%;
-
-  @media screen and (min-width: $screen-xl) {
-    align-items: flex-start;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
