--- a/src/components/molecules/GameResult/GameResult.module.scss
+++ b/src/components/molecules/GameResult/GameResult.module.scss
@@ -23,7 +23,7 @@
 }
 
 .result {
-  color: var(--color-red-500);
+  color: var(--color-primary);
   grid-area: result;
   margin: 0;
   text-align: center;
