--- a/src/components/atoms/Footer/Footer.module.scss
+++ b/src/components/atoms/Footer/Footer.module.scss
@@ -5,10 +5,13 @@
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 2rem 1rem;
 
   @media screen and (min-width: $screen-md) {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
   }
 }
@@ -16,13 +19,11 @@
 .list {
   display: flex;
   flex-direction: column;
+  font-weight: 500;
+  gap: 0.5rem;
   list-style: none;
   margin: 0;
   padding: 0;
-
-  li {
-    margin-bottom: 0.5rem;
-  }
 }
 
 .text {
