--- a/src/components/atoms/Header/Header.module.scss
+++ b/src/components/atoms/Header/Header.module.scss
@@ -25,8 +25,8 @@
 }
 
 .link {
-  color: var(--color-red-500);
   display: block;
+  font-weight: 500;
   padding: 1rem;
   text-transform: uppercase;
 
