--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,7 @@
   --color-bg-strong: var(--color-grey-700);
   --color-bg-stronger: var(--color-grey-800);
   --color-text: var(--color-grey-200);
+  --color-primary: var(--color-red-400);
 
   --box-shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --box-shadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -32,6 +33,7 @@
     --color-bg-strong: var(--color-grey-300);
     --color-bg-stronger: var(--color-grey-200);
     --color-text: var(--color-grey-800);
+    --color-primary: var(--color-red-500);
   }
 }
 
@@ -59,7 +61,7 @@ body {
 }
 
 a {
-  color: var(--color-red-500);
+  color: var(--color-primary);
   text-decoration: none;
 
   &:hover {
@@ -96,7 +98,7 @@ a {
 }
 
 .btn {
-  background-color: var(--color-red-500);
+  background-color: var(--color-primary);
   border: 0;
   border-radius: $border-radius;
   color: var(--color-grey-900);
@@ -106,7 +108,7 @@ a {
   transition: background-color 0.15s ease-in-out;
 
   &:hover:not(&:disabled) {
-    background-color: var(--color-red-400);
+    background-color: var(--color-red-300);
     box-shadow: var(--box-shadow-1);
     color: var(--color-grey-900);
   }
