--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,4 @@
+@use 'sass:map';
 @import 'variables';
 
 :root {
@@ -5,16 +6,17 @@
     @each $level, $hsl in $map {
       --color-#{$color}-#{$level}: #{$hsl};
     }
-    --color-#{$color}-bg: #{map-get($map, '900')};
-    --color-#{$color}-border: #{map-get($map, '800')};
-    --color-#{$color}-text: #{map-get($map, '100')};
+    --color-#{$color}-bg: #{map.get($map, '900')};
+    --color-#{$color}-border: #{map.get($map, '800')};
+    --color-#{$color}-text: #{map.get($map, '100')};
   }
 
   --color-bg: var(--color-grey-600);
-  --color-bg-modal: #{rgba(map-get($color-grey, '300'), 0.3)};
+  --color-bg-modal: #{rgba(map.get($color-grey, '300'), 0.3)};
   --color-bg-strong: var(--color-grey-700);
   --color-bg-stronger: var(--color-grey-800);
   --color-text: var(--color-grey-200);
+  --color-primary: var(--color-red-400);
 
   --box-shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --box-shadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
@@ -22,16 +24,17 @@
 
   @media (prefers-color-scheme: dark) {
     @each $color, $map in $colors {
-      --color-#{$color}-bg: #{map-get($map, '100')};
-      --color-#{$color}-border: #{map-get($map, '200')};
-      --color-#{$color}-text: #{map-get($map, '900')};
+      --color-#{$color}-bg: #{map.get($map, '100')};
+      --color-#{$color}-border: #{map.get($map, '200')};
+      --color-#{$color}-text: #{map.get($map, '900')};
     }
 
     --color-bg: var(--color-grey-400);
-    --color-bg-modal: #{rgba(map-get($color-grey, '700'), 0.3)};
+    --color-bg-modal: #{rgba(map.get($color-grey, '700'), 0.3)};
     --color-bg-strong: var(--color-grey-300);
     --color-bg-stronger: var(--color-grey-200);
     --color-text: var(--color-grey-800);
+    --color-primary: var(--color-red-500);
   }
 }
 
@@ -54,18 +57,12 @@ body {
   padding: 0;
 }
 
-// Workaround for added div
-// https://github.com/vercel/next.js/issues/42345#issuecomment-1304691380
-[data-nextjs-scroll-focus-boundary] {
-  display: contents;
-}
-
 .absolute {
   position: absolute;
 }
 
 a {
-  color: var(--color-red-500);
+  color: var(--color-primary);
   text-decoration: none;
 
   &:hover {
@@ -102,7 +99,7 @@ a {
 }
 
 .btn {
-  background-color: var(--color-red-500);
+  background-color: var(--color-primary);
   border: 0;
   border-radius: $border-radius;
   color: var(--color-grey-900);
@@ -112,7 +109,7 @@ a {
   transition: background-color 0.15s ease-in-out;
 
   &:hover:not(&:disabled) {
-    background-color: var(--color-red-400);
+    background-color: var(--color-red-300);
     box-shadow: var(--box-shadow-1);
     color: var(--color-grey-900);
   }
@@ -125,5 +122,16 @@ a {
   &.btn-lg {
     font-size: 1.25rem;
     padding: 0.5rem 1rem;
+  }
+}
+
+.pulse {
+  animation: 2000ms cubic-bezier(0.4, 0, 0.6, 1) 0ms infinite normal none
+    running pulse;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: 0.5;
   }
 }
