--- a/src/components/molecules/HeroSelect/HeroSelect.module.scss
+++ b/src/components/molecules/HeroSelect/HeroSelect.module.scss
@@ -14,7 +14,7 @@
   grid-template-rows: repeat(5, 72px);
   justify-content: center;
 
-  @media screen and (min-width: $screen-lg) {
+  @media screen and (min-width: $screen-xl) {
     grid-auto-flow: row;
     grid-auto-rows: 72px;
     grid-template-columns: repeat(5, 128px);
