--- a/src/components/molecules/ItemDetails/ItemDetails.module.scss
+++ b/src/components/molecules/ItemDetails/ItemDetails.module.scss
@@ -70,3 +70,9 @@
 .paragraph {
   margin: 0;
 }
+
+.ability-top {
+  color: var(--color-text-strong);
+  font-weight: bold;
+  margin: 0 0 0.25rem;
+}
