Add Ringmaster and update dependencies (#49)
* feat: Add Ringmaster and update dependencies

* feat: Show ability type and name

* fix: Add save option to msw for CI

--- a/src/components/molecules/ItemDetails/ItemDetails.module.scss
+++ b/src/components/molecules/ItemDetails/ItemDetails.module.scss
@@ -62,10 +62,6 @@
   padding: 0;
 }
 
-.negative {
-  color: var(--danger-color);
-}
-
 .attribute-value {
   color: var(--color-text-strong);
   font-weight: bold;
@@ -73,4 +69,10 @@
 
 .paragraph {
   margin: 0;
+}
+
+.ability-top {
+  color: var(--color-text-strong);
+  font-weight: bold;
+  margin: 0 0 0.25rem;
 }
